Justify intro text on Firefox Flicks page (Bug 704640)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@98818 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/firefoxflicks.css
+++ b/style/covehead/firefoxflicks.css
@@ -679,6 +679,7 @@ a.download-link span {
     line-height: 1.6;
     color: #e05f26;
     width: 580px;
+    text-align: justify;
 }
 
 /* }}} */
